--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java'
     id 'application'
 }
-
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_9
+}
 repositories {
     jcenter()
 }
